fixed flickering

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    border: 0;
+    overflow: hidden;
 }
 
 
